test/end-to-end/compile-errors/literal-does-not-match-expected-type.crow
main void()
	_ string = 0
